Connected rotation to scroll wheel and text of single events.

--- a/galaxy_viz/css/main.css
+++ b/galaxy_viz/css/main.css
@@ -162,3 +162,13 @@ footer p {
   bottom: 0;
 }
 
+#caption {
+  position: absolute;
+  font-size: 200%;
+  bottom: 50px;
+  width: 100%;
+  text-align: center;
+  z-index: 100;
+  display:block;  
+
+}
